--- a/index.html
+++ b/index.html
@@ -1533,9 +1533,10 @@
                 div.style.display = 'none';
                 div.style.width = '20%'
                 display = 1;
-                // searchbar_width.style.width = '402px';
                 hide_8.style.display = 'flex';
                 hide_7.style.display = 'flex';
+                hide_6.style.display = 'flex';
+                hide_5.style.display = 'flex';
 
             } else {
                 div.style.display = 'block';
@@ -1543,8 +1544,10 @@
                 div.style.width = '80%';
                 div1.style.width = '100%';
                 searchbar_width.style.width = '70%';
-                // hide_8.style.display = 'none';
-                // hide_7.style.display = 'none';
+                hide_8.style.display = 'none';
+                hide_7.style.display = 'none';
+                hide_6.style.display = 'none';
+                hide_5.style.display = 'none';
             }
         }
 
