--- a/index.html
+++ b/index.html
@@ -1554,11 +1554,53 @@
                                 </div>
 
                                 <div class="carousel-item active">
+                                    <div src="" class="d-block w-100" alt="Image 1"></div>
+                                    <div class="all-lubhavnu">
+                                        <div class="all-lubhavnu-text">
+                                            <div class="best-deal">Best Deal Online on smart watches</div>
+                                            <div class="smart-wear">SMART WEARABLE.</div>
+                                            <div class="upto-off">UP to 80% OFF</div>
+                                        </div>
+                                        <div class="wrist-watch">
+                                            <img src="./IMAGES/wrist-watch.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="carousel-item active">
+                                    <div src="" class="d-block d-block-1 w-100" alt="Image 1"></div>
+                                    <div class="all-lubhavnu">
+                                        <div class="all-lubhavnu-text">
+                                            <div class="best-deal">Our Best Collection</div>
+                                            <div class="smart-wear">Thinking !!!</div>
+                                            <div class="upto-off">HURRY UP !</div>
+                                        </div>
+                                        <div class="wrist-watch">
+                                            <img src="./IMAGES/wrist-watch.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="carousel-item active">
                                     <div src="" class="d-block d-block-2 w-100" alt="Image 1"></div>
                                     <div class="all-lubhavnu">
                                         <div class="all-lubhavnu-text">
                                             <div class="best-deal">All Time Rich</div>
                                             <div class="smart-wear">On Demand Brand.</div>
+                                            <div class="upto-off">HURRY UP !</div>
+                                        </div>
+                                        <div class="wrist-watch">
+                                            <img src="./IMAGES/wrist-watch.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="carousel-item active">
+                                    <div src="" class="d-block d-block-1 w-100" alt="Image 1"></div>
+                                    <div class="all-lubhavnu">
+                                        <div class="all-lubhavnu-text">
+                                            <div class="best-deal">Our Best Collection</div>
+                                            <div class="smart-wear">Thinking !!!</div>
                                             <div class="upto-off">HURRY UP !</div>
                                         </div>
                                         <div class="wrist-watch">
@@ -1632,8 +1674,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy S22 Ultra</h5>
-                                <p class="card-text">₹32999 <span class="line-through-txt">₹74999</span> </p>
-                                <p class="card-text"><small class="text-muted">SAVE 4500 </small></p>
+                                <p class="card-text">₹32999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹32999 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1643,8 +1686,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M13 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹10499 <span class="line-through-txt">₹74999</span> </p>
-                                <p class="card-text"><small class="text-muted">SAVE 4500 </small></p>
+                                <p class="card-text">₹10499 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹4500 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1654,8 +1698,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M33 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹16999 <span class="line-through-txt">₹74999</span> </p>
-                                <p class="card-text"><small class="text-muted">SAVE 4500 </small></p>
+                                <p class="card-text">₹16999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <p class="card-text"><small class="text-muted"style="color: #249B3E !important ;">Save - ₹8000 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1665,8 +1710,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M53 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹31999 <span class="line-through-txt">₹74999</span> </p>
-                                <p class="card-text"><small class="text-muted">SAVE 4500 </small></p>
+                                <p class="card-text">₹31999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹9000 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1676,8 +1722,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy S22 Ultra</h5>
-                                <p class="card-text">₹67999 <span class="line-through-txt">₹74999</span> </p>
-                                <p class="card-text"><small class="text-muted">SAVE 4500 </small></p>
+                                <p class="card-text">₹67999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹18000 </small></p>
                             </div>
                         </div>
                     </div>
