--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <title>MegaMart</title>
 </head>
@@ -45,9 +45,9 @@
 
                                 <li>
                                     <a href="">
-                                        <i  class="fa-solid fa-basket-shopping" style="color: #000000;"></i>
-                                        
-                                        </a>
+                                        <i class="fa-solid fa-basket-shopping" style="color: #000000;"></i>
+
+                                    </a>
 
                                     <a class="shadow p-2 bg-wh rounded-pill hide-txt-side kya" data-toggle="tooltip"
                                         title="Click the link" href=""> Groceries </a>
@@ -55,10 +55,11 @@
 
 
                                 <li><a href="">
-                                    <i class="fa-solid fa-lemon" style="color: #000000;"></i>
+                                        <i class="fa-solid fa-lemon" style="color: #000000;"></i>
                                     </a>
 
-                                    <a class="shadow p-2 bg-wh rounded-pill  hide-txt-side kya" href="">Premium Fruits</a>
+                                    <a class="shadow p-2 bg-wh rounded-pill  hide-txt-side kya" href="">Premium
+                                        Fruits</a>
                                 </li>
 
 
@@ -83,7 +84,8 @@
 
 
                                 <li><a href=""><i class="fa-solid fa-water-ladder" style="color: #000000;"></i></a>
-                                    <a class="shadow p-2 bg-wh rounded-pill hide-txt-side kya" href="">Home Improvement</a>
+                                    <a class="shadow p-2 bg-wh rounded-pill hide-txt-side kya" href="">Home
+                                        Improvement</a>
                                 </li>
 
 
@@ -1539,7 +1541,7 @@
                                     </div>
                                 </div>
 
-                                <div class="carousel-item active">
+                                <div class="carousel-item ">
                                     <div src="" class="d-block d-block-1 w-100" alt="Image 1"></div>
                                     <div class="all-lubhavnu">
                                         <div class="all-lubhavnu-text">
@@ -1553,7 +1555,7 @@
                                     </div>
                                 </div>
 
-                                <div class="carousel-item active">
+                                <div class="carousel-item ">
                                     <div src="" class="d-block w-100" alt="Image 1"></div>
                                     <div class="all-lubhavnu">
                                         <div class="all-lubhavnu-text">
@@ -1567,7 +1569,7 @@
                                     </div>
                                 </div>
 
-                                <div class="carousel-item active">
+                                <div class="carousel-item ">
                                     <div src="" class="d-block d-block-1 w-100" alt="Image 1"></div>
                                     <div class="all-lubhavnu">
                                         <div class="all-lubhavnu-text">
@@ -1581,7 +1583,7 @@
                                     </div>
                                 </div>
 
-                                <div class="carousel-item active">
+                                <div class="carousel-item ">
                                     <div src="" class="d-block d-block-2 w-100" alt="Image 1"></div>
                                     <div class="all-lubhavnu">
                                         <div class="all-lubhavnu-text">
@@ -1595,7 +1597,7 @@
                                     </div>
                                 </div>
 
-                                <div class="carousel-item active">
+                                <div class="carousel-item ">
                                     <div src="" class="d-block d-block-1 w-100" alt="Image 1"></div>
                                     <div class="all-lubhavnu">
                                         <div class="all-lubhavnu-text">
@@ -1631,11 +1633,11 @@
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                                 class="slider-dot" aria-label="Slide 3"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                                class="slider-dot" aria-label="Slide 3"></button>
+                                class="slider-dot" aria-label="Slide 4"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                                class="slider-dot" aria-label="Slide 3"></button>
+                                class="slider-dot" aria-label="Slide 5"></button>
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-                                class="slider-dot" aria-label="Slide 3"></button>
+                                class="slider-dot" aria-label="Slide 6"></button>
                         </div>
                     </div>
 
@@ -1674,9 +1676,11 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy S22 Ultra</h5>
-                                <p class="card-text">₹32999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <p class="card-text">₹32999 <span
+                                        class="line-through-txt text-decoration-line-through">₹74999</span> </p>
                                 <hr style="border: 1px solid #EDEDED; width: 100%;">
-                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹32999 </small></p>
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
+                                        - ₹32999 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1686,9 +1690,11 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M13 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹10499 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <p class="card-text">₹10499 <span
+                                        class="line-through-txt text-decoration-line-through">₹74999</span> </p>
                                 <hr style="border: 1px solid #EDEDED; width: 100%;">
-                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹4500 </small></p>
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
+                                        - ₹4500 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1698,9 +1704,11 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M33 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹16999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <p class="card-text">₹16999 <span
+                                        class="line-through-txt text-decoration-line-through">₹74999</span> </p>
                                 <hr style="border: 1px solid #EDEDED; width: 100%;">
-                                <p class="card-text"><small class="text-muted"style="color: #249B3E !important ;">Save - ₹8000 </small></p>
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
+                                        - ₹8000 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1710,9 +1718,11 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M53 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹31999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <p class="card-text">₹31999 <span
+                                        class="line-through-txt text-decoration-line-through">₹74999</span> </p>
                                 <hr style="border: 1px solid #EDEDED; width: 100%;">
-                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹9000 </small></p>
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
+                                        - ₹9000 </small></p>
                             </div>
                         </div>
                         <div class="card uni-card" style="border-radius: 16px !important;">
@@ -1722,9 +1732,11 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy S22 Ultra</h5>
-                                <p class="card-text">₹67999 <span class="line-through-txt text-decoration-line-through">₹74999</span> </p>
+                                <p class="card-text">₹67999 <span
+                                        class="line-through-txt text-decoration-line-through">₹74999</span> </p>
                                 <hr style="border: 1px solid #EDEDED; width: 100%;">
-                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save - ₹18000 </small></p>
+                                <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
+                                        - ₹18000 </small></p>
                             </div>
                         </div>
                     </div>
@@ -2066,9 +2078,9 @@
                             <div class="prenexbtn">
                                 <button class="pr-btn" onclick="goPrev()"></button>
                                 <button class="nxt-btn" onclick="goNext()"></button>
-                                <button class="ext-btn"></button>
-                                <button class="ext-btn"></button>
-                                <button class="ext-btn"></button>
+                                <button class="nxt-btn" onclick="goNext()"></button>
+                                <button class="nxt-btn" onclick="goNext()"></button>
+                                <button class="nxt-btn" onclick="goNext()"></button>
                             </div>
 
 
