--- a/index.html
+++ b/index.html
@@ -1676,9 +1676,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy S22 Ultra</h5>
-                                <p class="card-text">₹32999 <span
+                                <p class="card-text">₹32999&nbsp; <span
                                         class="line-through-txt text-decoration-line-through">₹74999</span> </p>
-                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <hr  style="margin: 10px 0px; border: 1px solid #EDEDED; width: 100%;">
                                 <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
                                         - ₹32999 </small></p>
                             </div>
@@ -1690,9 +1690,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M13 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹10499 <span
+                                <p class="card-text">₹10499 &nbsp; <span
                                         class="line-through-txt text-decoration-line-through">₹74999</span> </p>
-                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <hr style="margin: 10px 0px;border: 1px solid #EDEDED; width: 100%;">
                                 <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
                                         - ₹4500 </small></p>
                             </div>
@@ -1704,9 +1704,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M33 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹16999 <span
+                                <p class="card-text">₹16999 &nbsp; <span
                                         class="line-through-txt text-decoration-line-through">₹74999</span> </p>
-                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <hr style="margin: 10px 0px;border: 1px solid #EDEDED; width: 100%;">
                                 <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
                                         - ₹8000 </small></p>
                             </div>
@@ -1718,9 +1718,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy M53 (4GB | 64 GB )</h5>
-                                <p class="card-text">₹31999 <span
+                                <p class="card-text">₹31999 &nbsp; <span
                                         class="line-through-txt text-decoration-line-through">₹74999</span> </p>
-                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <hr style="margin: 10px 0px;border: 1px solid #EDEDED; width: 100%;">
                                 <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
                                         - ₹9000 </small></p>
                             </div>
@@ -1732,9 +1732,9 @@
                                 style="border-radius: 16px 16px 0 0 ;" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Galaxy S22 Ultra</h5>
-                                <p class="card-text">₹67999 <span
+                                <p class="card-text">₹67999 &nbsp; <span
                                         class="line-through-txt text-decoration-line-through">₹74999</span> </p>
-                                <hr style="border: 1px solid #EDEDED; width: 100%;">
+                                <hr style="margin: 10px 0px;border: 1px solid #EDEDED; width: 100%;">
                                 <p class="card-text"><small class="text-muted" style="color: #249B3E !important ;">Save
                                         - ₹18000 </small></p>
                             </div>
