--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             </div>
 
 
-                            <div class="scnd-serch-bar scnd-sidebar">
+                            <div class="scnd-serch-bar scnd-sidebar" style="width: 100%;">
                                 <img src="./IMAGES/fist-magnifier.svg" alt="">
                                 <input id="inpt" type="text" placeholder="Search essentials, groceries and more...">
                             </div>
@@ -1743,7 +1743,6 @@
 
 
                     <div class="shop-frm-top-cat">
-
                         <div class="shop-frm-top-cat-tex">
                             <div class="containera">
                                 <div class="txt-grbd">
